feat: Add blog template example with schema mapping and customization
BLOG TEMPLATE - PRODUCTION EXAMPLE

Created complete blog template example demonstrating:

1. TEMPLATE DEFINITION (template.json):
   - Required models: user, post, comment
   - Required fields with types
   - Optional fields
   - Feature flags (auth, comments, search, SEO)
   - Expected pages structure

2. SCHEMA MAPPING (ssot.config.ts):
   - Model mappings: user->Author, post->BlogPost
   - Field mappings: name->fullName, title->heading, content->body
   - Nested mappings: post.author.name->BlogPost.writer.fullName
   - Theme customization
   - Feature toggles

3. CUSTOM SCHEMA (schema.prisma):
   - Non-standard model names (Author, BlogPost)
   - Non-standard field names (heading, body, writer)
   - Demonstrates real-world scenario where schema differs from template

4. COMPONENT OVERRIDES (custom/):
   - MyPostCard.tsx: Custom post card with enhanced styling
   - MyCommentSection.tsx: Advanced comment system with threading
   - Shows how to override generated components
   - Maintains type safety with mapped fields

5. COMPREHENSIVE README:
   - Schema mapping examples (simple, nested, optional)
   - Customization examples (override, extend)
   - Advanced mapping (transforms, computed fields, conditional)
   - Validation rules
   - Troubleshooting guide
   - Generated code examples

KEY FEATURES:
âœ… Schema mapping (use your existing schema)
âœ… Component overrides (customize any component)
âœ… Type safety (full TypeScript with your types)
âœ… Flexibility (keep generated code or replace it)
âœ… Documentation (inline comments explaining mappings)

DEMONSTRATES:
- How templates work with ANY schema
- How to map non-standard field names
- How to override generated components
- How to maintain type safety
- How to customize without changing schema

FILES CREATED:
- packages/ui-templates/blog/template.json
- examples/blog-with-mapping/ssot.config.ts
- examples/blog-with-mapping/prisma/schema.prism

--- a/packages/create-ssot-app/package.json
+++ b/packages/create-ssot-app/package.json
@@ -15,7 +15,8 @@
     "dev": "tsc -p tsconfig.json --watch",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:e2e": "vitest run e2e-ui-generation"
+    "test:e2e": "vitest run e2e-ui-generation",
+    "test:e2e-simple": "vitest run e2e-ui-generation-simple"
   },
   "keywords": [
     "prisma",
