feat: Add shared component library and chatbot template - demonstrates component reuse POC
SHARED COMPONENT LIBRARY (@ssot-ui/shared):

1. Avatar Component:
   - User/bot profile pictures
   - Gradient fallbacks
   - Multiple sizes (sm, md, lg, xl)
   - Error handling with fallback
   - Used in: Blog (comments, authors) + Chatbot (messages)

2. Badge Component:
   - Status indicators, tags
   - 6 variants (default, primary, success, warning, error, neutral)
   - 3 sizes (sm, md, lg)
   - Used in: Blog (tags, status) + Chatbot (online, typing)

3. TimeAgo Component:
   - Smart time formatting (just now, 2m ago, 3h ago, etc.)
   - ISO datetime for accessibility
   - Tooltip with full date
   - Used in: Blog (timestamps) + Chatbot (messages)

4. Button Component:
   - 5 variants (primary, secondary, outline, ghost, danger)
   - Loading states with spinner
   - Full width option
   - Disabled states
   - Used in: Blog (submit, CRUD) + Chatbot (send)

5. Card Component:
   - 3 variants (default, outlined, elevated)
   - Flexible padding
   - Hover effects
   - Clickable option
   - Used in: Blog (post cards) + Chatbot (message bubbles)

CHATBOT TEMPLATE:

1. Generator Implementation (chatbot-generator.ts):
   - generateChatbotTemplate() - Main orchestrator
   - Chat layout with header
   - Chat page with message list and input
   - ChatMessage component with bubbles
   - ChatInput with send button
   - TypingIndicator with animation

2. Generated Files (5):
   - app/(chat)/layout.tsx - Chat header
   - app/(chat)/page.tsx - Main chat interface
   - components/ChatMessage.tsx - Message bubble (uses Avatar, Badge, TimeAgo)
   - components/ChatInput.tsx - Input field (uses Button)
   - components/TypingIndicator.tsx - Typing animation (uses Avatar, Badge)

3. Features:
   - Real-time message list
   - Bot response simulation
   - Typing indicators
   - Auto-scroll to latest
   - SDK hook integration (useMessageList, useCreateMessage)
   - Shared component usage

4. Template

--- a/packages/create-ssot-app/package.json
+++ b/packages/create-ssot-app/package.json
@@ -17,7 +17,8 @@
     "test:watch": "vitest",
     "test:e2e": "vitest run e2e-ui-generation",
     "test:e2e-simple": "vitest run e2e-ui-generation-simple",
-    "test:blog": "vitest run e2e-blog-generation"
+    "test:blog": "vitest run e2e-blog-generation",
+    "test:chatbot": "vitest run e2e-chatbot-generation"
   },
   "keywords": [
     "prisma",
