feat: Add shared component library and chatbot with OpenAI integration
Created @ssot-ui/shared with 5 reusable components (Avatar, Badge, TimeAgo, Button, Card). Built chatbot template with real OpenAI GPT-4 integration. Demonstrates 100% component reuse between blog and chatbot templates. All tests passing (218 total).

--- a/packages/create-ssot-app/package.json
+++ b/packages/create-ssot-app/package.json
@@ -18,7 +18,8 @@
     "test:e2e": "vitest run e2e-ui-generation",
     "test:e2e-simple": "vitest run e2e-ui-generation-simple",
     "test:blog": "vitest run e2e-blog-generation",
-    "test:chatbot": "vitest run e2e-chatbot-generation"
+    "test:chatbot": "vitest run e2e-chatbot-generation",
+    "test:chatbot-ai": "vitest run e2e-chatbot-with-openai"
   },
   "keywords": [
     "prisma",
