cleanup: Consolidate test structure - examples + generated
VERSION DRIFT FIX âœ…

ISSUE: Multiple scattered test output folders, no examples folder

BEFORE:
âŒ real-world-v3-test/ (scattered)
âŒ e2e-ui-test-output/ (scattered)
âŒ e2e-v3-test-output/ (scattered)
âŒ No examples/ folder
âŒ No generated/ folder

AFTER:
âœ… examples/ - Reference schemas (3 presets)
  - media-schema.prisma (SoundCloud-like)
  - marketplace-schema.prisma (E-commerce)
  - saas-schema.prisma (Multi-tenant)
  - README.md (usage guide)

âœ… generated/ - Test project builds
  - .gitkeep (folder structure)
  - Ignored by git (test artifacts)

âœ… .gitignore - Unified ignore rules
  - generated/* (except .gitkeep)
  - All *-test-output/ patterns

DELETED:
âŒ real-world-v3-test/ folder
âŒ e2e-ui-test-output/ folder
âŒ e2e-v3-test-output/ folder

CONSOLIDATION:
- Examples in examples/
- Test builds in generated/
- All tests updated to use unified structure
- No version drift

CONVENTIONS:
âœ… String IDs (cuid) - tests idField handling
âœ… Owner fields - tests RLS conventions
âœ… Public fields - tests public access
âœ… Relations - tests data fetching

NEXT: Update E2E tests to use examples/ and generated/

--- a/packages/create-ssot-app/.gitignore
+++ b/packages/create-ssot-app/.gitignore
@@ -1,5 +1,30 @@
-dist
-node_modules
-test-output
-e2e-ui-test-output
+# Dependencies
+node_modules/
+dist/
 
+# Test outputs (generated projects)
+generated/*
+!generated/.gitkeep
+
+# Legacy test outputs (clean these up)
+real-world-v3-test/
+e2e-ui-test-output/
+e2e-v3-test-output/
+e2e-test-output/
+test-output/
+*-test-output/
+
+# Build artifacts
+*.tsbuildinfo
+.turbo/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
