--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@ssot-codegen/gen": "workspace:*",
+    "@prisma/internals": "^6.0.0",
     "commander": "^12.0.0",
     "chalk": "^5.3.0"
   },
