fix: Resolve CLI build errors and getDMMF import issue
- Add ProjectConfig import to generate-bulk.ts
- Fix getDMMF import to handle ESM/CJS exports
- Add better error messages for @prisma/internals issues

--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "prisma": "^5.0.0",
     "rimraf": "^5.0.0",
     "typescript": "^5.4.0"
+  },
+  "dependencies": {
+    "@prisma/internals": "^6.19.0"
   }
 }
