add build to pipeline + bugfixes

--- a/packages/gen/package.json
+++ b/packages/gen/package.json
@@ -40,10 +40,12 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
+    "build:test": "pnpm build && pnpm test:validate",
     "prepublishOnly": "pnpm run build",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
+    "test:validate": "vitest run src/generators/__tests__/generated-code-validation.test.ts",
     "test:integration": "vitest run --config vitest.integration.config.ts",
     "test:integration:watch": "vitest --config vitest.integration.config.ts",
     "test:all": "vitest run && vitest run --config vitest.integration.config.ts"
