--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "madge": "^8.0.0",
     "prisma": "^5.0.0",
     "rimraf": "^5.0.0",
+    "tsx": "^4.7.0",
     "typescript": "^5.4.0"
   },
   "dependencies": {
