--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@gen/*": [
-        "C:\\wamp64\\www\\ssot-codegen\\generated\\05-image-optimizer-3\\src/*"
+        "C:\\wamp64\\www\\ssot-codegen\\generated\\E-commerce Store-36\\src/*"
       ]
     }
   }
