Add automated test for bulk generation with build
- Creates comprehensive test script that verifies:
  * Bulk generation completes successfully
  * React/Vite dependencies are added to package.json
  * Frontend scripts are configured correctly
  * Config files (vite, postcss, tailwind) exist and use ES modules
  * Build output directory exists
- Test finds latest generated project by modification time
- Added test:bulk script to package.json for easy execution
- Test passes with all critical checks âœ…

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "test:ai-chat": "cd examples/ai-chat-example && pnpm run test",
     "test:generator": "cd packages/gen && pnpm test",
     "test:generated": "node scripts/test-generated.js",
+    "test:bulk": "node test-bulk-generation.js",
     "full-test": "pnpm run build && pnpm run lint && pnpm test:generator && pnpm run test:generated"
   },
   "devDependencies": {
