--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "full-test": "pnpm run build && pnpm run lint && pnpm test:generator && pnpm run test:generated"
   },
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
     "@typescript-eslint/eslint-plugin": "^8.46.3",
     "@typescript-eslint/parser": "^8.46.3",
     "eslint": "^9.39.1",
     "knip": "^5.67.1",
     "madge": "^8.0.0",
+    "playwright": "^1.56.1",
     "prisma": "^5.0.0",
     "rimraf": "^5.0.0",
     "tsx": "^4.7.0",
